--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.8",
     "bulma": "^1.0.0",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
